<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/details_layout"
        xmlns:android="http://schemas.android.com/apk/res/android" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/activity_image_details"
            android:layout_marginBottom="5dp"
            android:src="@drawable/placeholder"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/sample_event"
            android:gravity="center_horizontal"
            android:id="@+id/event_name_details"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/sample_summary"
            android:gravity="center_horizontal"
            android:id="@+id/event_summary_details"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/lorem_ipsum"
            android:padding="3dp"
            android:id="@+id/event_desc_details"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:scaleType="fitXY"
                android:src="@drawable/mapmarker"/>

            <TextView
                android:id="@+id/location_time_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/bengaluru"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Organized By"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:src="@drawable/img1"
                android:scaleType="centerCrop"
                android:id="@+id/host_image_details"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/john_doe"
                android:id="@+id/host_name_details"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>