<?xml version="1.0" encoding="utf-8"?>
    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorCardBackground"
        android:id="@+id/recycleritem_activity"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorCardBackground">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/activity_image"
                android:scaleType="fitXY"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="start">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:id="@+id/host_image"
                    android:layout_margin="10dp"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:id="@+id/event_name"
                    android:text="@string/sample_event"
                    android:textStyle="bold"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/event_summary"
                android:textSize="16sp"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:text="@string/sample_summary"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/location_time_id"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_margin="5sp"
                android:gravity="center_horizontal"
                android:text="@string/bengaluru_25_may_2018"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="20dp">

                <android.support.v7.widget.AppCompatButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/readmore_btn"
                    android:layout_marginTop="5dp"
                    android:text="Read More"
                    style="@style/RaisedButton"
                    />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>